Kubernetes/cka/networking/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata: 
  name: gateway
spec:
  gatewayName: gateway-class
  listeners:
  - name: http
    protocol: Http
    port: 80
