Kubernetes/cka/networking/gateway/app-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: 
  name: split-traffic
spec: 
  parentRefs:
  - name: app-gateway
  rules:
  - backendRefs:
    - name: aap-v1
      port: 80
      weight: 80
    - name: app-v2
      port: 80
      weight: 20
