Kubernetes/cka/networking/gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: 
  name: http-route
spec:
  parentRefs: 
  - name: gateway
    hostNames: 
    - "www.example.com"
    rules:
    - matches:
      - path:
          type: PathPrefix
           value: /login
      backendRefs:       
      - name: example-svc
        port: 80
